--- a/handlebars/actor-movement-settings.hbs
+++ b/handlebars/actor-movement-settings.hbs
@@ -5,10 +5,10 @@
       <li class="actor-movement-header">
         <div class="actor-movement-name-cell">
           <i class="fas fa-shoe-prints"></i>
-          <span class="actor-movement-title">移動方法</span>
+          <span class="actor-movement-title">{{localize "SW25MovementRuler.Settings.MovementInfo"}}</span>
         </div>
         <div class="actor-movement-controls">
-          <a class="actor-movement-control mm-add" title="新規"><i class="fas fa-plus"></i> 新規</a>
+          <a class="actor-movement-control mm-add" title="{{localize "SW25MovementRuler.Settings.Create"}}"><i class="fas fa-plus"></i> {{localize "SW25MovementRuler.Settings.Create"}}</a>
         </div>
       </li>
 
@@ -17,23 +17,23 @@
       <li class="actor-movement-row" data-name="{{this.name}}">
         <div class="actor-movement-name-cell">
           <img class="actor-movement-image" src="icons/svg/wing.svg" alt=""/>
-          <input type="text" class="mm-name" value="{{this.name}}" placeholder="移動方法名"/>
+          <input type="text" class="mm-name" value="{{this.name}}" placeholder="{{localize "SW25MovementRuler.Settings.MovementName"}}"/>
         </div>
 
         <div class="actor-movement-detail">
-          <label>移動力</label>
+          <label>{{localize "SW25MovementRuler.Settings.Movement"}}</label>
           <input type="number" class="mm-speed" min="0" step="1" value="{{this.speed}}"/>
         </div>
 
         <div class="actor-movement-controls">
-          <a class="actor-movement-control mm-delete" title="削除"><i class="fas fa-trash"></i></a>
+          <a class="actor-movement-control mm-delete" title="{{localize "SW25MovementRuler.Settings.Delete"}}"><i class="fas fa-trash"></i></a>
         </div>
       </li>
       {{/each}}
     </ol>
 
     <div class="form-group">
-      <label>有効な移動方法</label>
+      <label>{{localize "SW25MovementRuler.Settings.ActiveMovement"}}</label>
       <div class="form-fields">
         <select class="mm-active">
           {{#each entries}}
@@ -44,7 +44,7 @@
     </div>
   </section>
   <footer class="sheet-footer flexrow">
-    <button type="submit" class="mv-save"><i class="fas fa-save"></i> 保存</button>
-    <button type="button" data-action="cancel">キャンセル</button>
+    <button type="submit" class="mv-save"><i class="fas fa-save"></i> {{localize "SW25MovementRuler.Settings.Save"}}</button>
+    <button type="button" data-action="cancel">{{localize "SW25MovementRuler.Settings.Cancel"}}</button>
   </footer>
 </form>
